--- a/apk/res/values-gu/strings.xml
+++ b/apk/res/values-gu/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"ઍપનો આરોગ્ય સંબંધિત ડેટાનો ઍક્સેસ મેનેજ કરો"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"પરવાનગીઓ અને ડેટા"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"તમારા ડિવાઇસ પર આરોગ્ય અને ફિટનેસના ડેટાને મેનેજ કરો તથા કઈ ઍપ તે ઍક્સેસ કરી શકે, તે નિયંત્રિત કરો"</string>
     <string name="data_title" msgid="4456619761533380816">"ડેટા અને ઍક્સેસ"</string>
@@ -1012,11 +1014,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"સૌથી નીચે ખસેડો"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"પ્રાધાન્યતા સૂચિમાં <xliff:g id="SELECTED_APP">%s</xliff:g>ને ખેંચવા તેમજ તેનો ક્રમ બદલવા માટેનું બટન"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"પ્રાધાન્યતા સૂચિમાંથી <xliff:g id="SELECTED_APP">%s</xliff:g> કાઢી નાખવા માટેનું બટન"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"ઍપના સૉર્સની સૂચિમાંથી <xliff:g id="SELECTED_APP">%s</xliff:g>ને ફરીથી ક્રમમાં ગોઠવવા અથવા કાઢી નાખવાનું બટન"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"ક્રમમાં ફેરફાર કરવા માટે બે વાર ટૅપ કરો અને ખેંચો"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"સૂચિમાં <xliff:g id="POSITION">%1$s</xliff:g> ક્રમે <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"ફિટનેસ, સુખાકારી"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"પરવાનગીઓ"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, હેલ્થ ડેટા, હેલ્થ કૅટેગરી, ડેટા ઍક્સેસ, પ્રવૃત્તિ, શરીરના માપ, સાઇકલ ટ્રૅકિંગ, પોષણ, ઊંઘ, આરોગ્ય વિશેની મહત્ત્વપૂર્ણ માહિતી"</string>
@@ -1110,12 +1110,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"કોઈ ઍપ ઉમેરો"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"ઍપના સૉર્સમાં ફેરફાર કરો"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ડિવાઇસ પર ડિફૉલ્ટ"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"ઉપર ખસેડો"</string>
+    <string name="move_down" msgid="4404970288236170693">"નીચે ખસેડો"</string>
+    <string name="remove" msgid="1340423400489007362">"કાઢી નાખો"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ઍપનો ડેટા"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>માંનો ડેટા અહીં દેખાશે"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connectનો ઍક્સેસ ધરાવતી ઍપનો ડેટા અહીં દેખાશે"</string>
