--- a/apk/res/values-ar/strings.xml
+++ b/apk/res/values-ar/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"إدارة إمكانية وصول التطبيقات إلى البيانات الصحية"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"الأذونات والبيانات"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"يمكنك إدارة بيانات الصحة واللياقة البدنية على جهازك والتحكّم في التطبيقات التي يمكنها الوصول إلى تلك البيانات"</string>
     <string name="data_title" msgid="4456619761533380816">"البيانات وإمكانية وصول التطبيقات إليها"</string>
