--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"ניהול הגישה של האפליקציות לנתוני בריאות"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"הרשאות ונתונים"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"ניהול נתוני הבריאות והכושר במכשיר, ובחירה האפליקציות שיכולות לגשת לנתונים"</string>
     <string name="data_title" msgid="4456619761533380816">"נתונים וגישה"</string>
@@ -1012,7 +1014,7 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"העברה לתחתית הרשימה"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"כפתור לגרירה וסידור מחדש של <xliff:g id="SELECTED_APP">%s</xliff:g> ברשימת העדיפויות של האפליקציות"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"כפתור להסרת <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת העדיפויות של האפליקציות"</string>
-    <string name="see_actions_button_content_description" msgid="2004104767369363475">"כפתור לשינוי המיקום או להסרה של <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת המקורות של אפליקציות"</string>
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"כפתור לשינוי המיקום או להסרה של <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת המקורות לאפליקציות"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"כדי לשנות את הסדר, לוחצים לחיצה כפולה וגוררים"</string>
     <string name="priority_list_item_content_description" msgid="8792727829749801217">"מקום <xliff:g id="POSITION">%1$s</xliff:g> ברשימה \"<xliff:g id="SELECTED_APP">%2$s</xliff:g>\""</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"כושר גופני, איכות חיים"</string>
@@ -1100,7 +1102,7 @@
     <string name="data_restore_pending_banner_content" msgid="7631240781262092142">"לפני המשך שחזור הנתונים, עליך לעדכן את המערכת של הטלפון."</string>
     <string name="data_restore_pending_banner_button" msgid="2150345659341456815">"לעדכון"</string>
     <string name="data_totals_header" msgid="8316977153276216025">"סכומי נתונים"</string>
-    <string name="app_sources_header" msgid="6343062519512947665">"המקורות של האפליקציות"</string>
+    <string name="app_sources_header" msgid="6343062519512947665">"אפליקציות שמשמשות כמקור נתונים"</string>
     <string name="data_sources_footer" msgid="6414387142919741183">"אפשר להוסיף מקורות של אפליקציות לרשימה כדי לראות איך סכומי הנתונים משתנים. הסרת אפליקציה מהרשימה הזו תמנע ממנה לתרום לסכומים, אך עדיין יהיו לה הרשאות כתיבה."</string>
     <string name="data_sources_empty_state" msgid="1899652759274805556">"אין מקורות של אפליקציות"</string>
     <string name="data_sources_empty_state_footer" msgid="8933950342291569638">"אחרי שנותנים לאפליקציות הרשאה לכתוב נתונים של <xliff:g id="CATEGORY_NAME">%1$s</xliff:g>, המקורות מופיעים כאן."</string>
