--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"ସ୍ୱାସ୍ଥ୍ୟ ଡାଟାକୁ ଆପର ଆକ୍ସେସ ପରିଚାଳନା କରନ୍ତୁ"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"ଅନୁମତି ଏବଂ ଡାଟା"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"ଆପଣଙ୍କ ଡିଭାଇସରେ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ପରିଚାଳନା କରନ୍ତୁ ଓ କେଉଁ ଆପ୍ସ ଏହାକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="data_title" msgid="4456619761533380816">"ଡାଟା ଏବଂ ଆକ୍ସେସ"</string>
