--- a/apk/res/values-pt/strings.xml
+++ b/apk/res/values-pt/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Conexão Saúde"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"Gerenciar o acesso de apps aos dados de saúde"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"Permissões e dados"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"Gerencie os dados de saúde e condicionamento físico no seu dispositivo e controle quais apps podem ter acesso a eles"</string>
     <string name="data_title" msgid="4456619761533380816">"Dados e acesso"</string>
