--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -19,6 +19,8 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"‫Health Connect ایپ"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"صحت کے ڈیٹا تک ایپ کی رسائی کا نظم کریں"</string>
+    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
+    <skip />
     <string name="permissions_and_data_header" msgid="4406105506837487805">"اجازتیں اور ڈیٹا"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"اپنے آلہ پر صحت اور تندرستی کے ڈیٹا کا نظم کریں اور کنٹرول کریں کہ کون سی ایپس اس تک رسائی حاصل کر سکتی ہیں"</string>
     <string name="data_title" msgid="4456619761533380816">"ڈیٹا اور رسائی"</string>
