--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"অটোমেটিক মুছে দেওয়া, ডেটা সোর্স, ব্যাক-আপ নেওয়া ও ফিরিয়ে আনা"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"আরও বেশি আইটেম"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"কম আইটেম"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"ব্যাক-আপ নিন"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ডেটা সোর্স ও প্রায়োরিটি"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ইউনিট সেট করুন"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"যেসব অ্যাপ আপনার ডেটা সম্প্রতি অ্যাক্সেস করেছে তা এখানে অটোমেটিক দেখা যাবে"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"সব দেখুন"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"সাম্প্রতিক অ্যাক্সেস লোড করা যায়নি"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"অ্যাক্টিভিটি"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"অ্যাক্টিভিটি"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"শরীরের পরিমাপ সংক্রান্ত ডেটা"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"অনুমতি দিন"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"সব অনুমতি দিন"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"অনুমতি দেবেন না"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Health Connect-এর কোন কোন ডেটা এই অ্যাপকে দেখতে ও সেভ করতে দিতে চান তা বেছে নিন"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Health Connect থেকে কোন কোন ডেটা এই অ্যাপকে দেখতে দিতে চান তা বেছে নিন"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Health Connect-এর কোন কোন ডেটা এই অ্যাপকে সেভ করতে দিতে চান তা বেছে নিন"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"আপনি এই অ্যাপকে পড়ার অ্যাক্সেস দিলে অ্যাপটি নতুন ডেটা সহ গত ৩০ দিনের ডেটাও পড়তে পারবে"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"আপনি এই অ্যাপকে পড়ার অ্যাক্সেস দিলে অ্যাপটি নতুন ও পুরনো ডেটা পড়তে পারবে"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g>-কে Health Connect অ্যাক্সেস করার অনুমতি দেবেন?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>-কে ফিটনেস ও ওয়েলনেস সংক্রান্ত ডেটা অ্যাক্সেস করার অনুমতি দিতে চান?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> কীভাবে তার <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> অনুযায়ী আপনার ডেটা ম্যানেজ করে আপনি তা জানতে পারবেন"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"গোপনীয়তা নীতি"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"দিন বেছে নেওয়া হয়েছে"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"আগের দিন"</string>
     <string name="default_error" msgid="7966868260616403475">"কিছু সমস্যা হয়েছে। আবার চেষ্টা করুন।"</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"অজানা রিসোর্স"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"সোর্স ডেটা"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>শুরুর ব্র্যাকেট।"</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>শেষ ব্র্যাকেট।"</string>
