--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -38,11 +38,19 @@
     <string name="connected_apps_connected_subtitle" msgid="7412413366085718583">"{count,plural, =1{1 App hat Zugriff}other{# Apps haben Zugriff}}"</string>
     <string name="connected_apps_button_no_permissions_subtitle" msgid="1651994862419752908">"Keine"</string>
     <string name="entry_details_title" msgid="590184849040247850">"Eintragsdetails"</string>
-    <string name="browse_data_title" msgid="5232691805953326097">"Daten durchsuchen"</string>
+    <string name="browse_data_title" msgid="5232691805953326097">"Daten ansehen"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Daten und Apps ansehen, die darauf zugreifen können"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Automatisches Löschen, Datenquellen, Sicherung und Wiederherstellung"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Mehr Elemente"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Weniger Elemente"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Backup machen"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Datenquellen und Priorität"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Einheiten festlegen"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Hier werden automatisch die Apps angezeigt, die zuletzt auf deine Daten zugegriffen haben"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Alle ansehen"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Letzte Zugriffe konnten nicht geladen werden"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktivität"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"Aktivität"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Körperwerte"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Erlauben"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Alle erlauben"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Nicht erlauben"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Lege fest, welche Daten diese App in Health Connect lesen und schreiben darf"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Lege fest, welche Daten diese App in Health Connect lesen darf"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Lege fest, welche Daten diese App in Health Connect schreiben darf"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Wenn du der App Lesezugriff gibst, kann sie neue Daten und die Daten der letzten 30 Tage lesen"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Wenn du der App Lesezugriff gibst, kann sie neue und frühere Daten lesen"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Zugriff auf Health Connect erlauben?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ erlauben, auf Fitness- und Wellnessdaten zuzugreifen?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Wie <xliff:g id="APP_NAME">%1$s</xliff:g> mit deinen Daten umgeht, erfährst du in der <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> des Entwicklers"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"Datenschutzerklärung"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ausgewählter Tag"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Vortag"</string>
     <string name="default_error" msgid="7966868260616403475">"Ein Fehler ist aufgetreten. Bitte versuche es noch einmal."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Unbekannte Ressource"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Quelldaten"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Geschweifte Klammer auf."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Geschweifte Klammer zu."</string>
@@ -470,7 +489,7 @@
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"Beim Export für den <xliff:g id="DATE">%1$s</xliff:g> ist ein Problem aufgetreten. Bitte leg ein neues Datum für den Export fest und versuch es noch mal."</string>
     <string name="next_export_time" msgid="3138247220014510213">"Nächster Export: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"Nächster Export startet bald"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Backup und Wiederherstellung"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Backup &amp; Wiederherstellung"</string>
     <string name="last_export_time" msgid="9205875050823594041">"Letzter Export: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="last_export_time_now" msgid="31498024135933750">"Letzter Export: jetzt"</string>
     <string name="last_export_time_minutes_ago" msgid="5279296486877765961">"{count,plural, =1{Letzter Export: vor 1 Minute}other{Letzter Export: vor # Minuten}}"</string>
