--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Αυτόματη διαγραφή, πηγές δεδομένων, δημιουργία αντιγράφου ασφαλείας και επαναφορά"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Περισσότερα στοιχεία"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Λιγότερα στοιχεία"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Δημιουργία αντιγράφων ασφαλείας"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Πηγές δεδομένων και προτεραιότητα"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Ορισμός μονάδων"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Οι εφαρμογές που έχουν αποκτήσει πρόσφατα πρόσβαση στα δεδομένα σας θα εμφανίζονται αυτόματα εδώ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Προβολή όλων"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Δεν ήταν δυνατή η φόρτωση της πρόσφατης πρόσβασης"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Δραστηριότητα"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"δραστηριότητα"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Μετρήσεις σώματος"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Αποδοχή"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Να επιτρέπονται όλες"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Να μην επιτρέπεται"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Επιλέξτε τα δεδομένα που θέλετε να διαβάζει ή να γράφει αυτή η εφαρμογή στο Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Επιλέξτε τα δεδομένα που θέλετε να διαβάζει αυτή η εφαρμογή από το Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Επιλέξτε τα δεδομένα που θέλετε να γράφει αυτή η εφαρμογή στο Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Αν παραχωρήσετε πρόσβαση ανάγνωσης, η εφαρμογή θα έχει δυνατότητα ανάγνωσης νέων δεδομένων και δεδομένων από τις τελευταίες 30 ημέρες."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Αν παραχωρήσετε πρόσβαση ανάγνωσης, αυτή η εφαρμογή θα έχει δυνατότητα ανάγνωσης νέων και παλαιότερων δεδομένων."</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Να επιτρέπεται στο <xliff:g id="APP_NAME">%1$s</xliff:g> να αποκτήσει πρόσβαση στο Health Connect;"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> να έχει πρόσβαση σε παλαιότερα δεδομένα φυσικής κατάστασης και ευεξίας;"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Μπορείτε να μάθετε πώς το <xliff:g id="APP_NAME">%1$s</xliff:g> χειρίζεται τα δεδομένα σας στην <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"πολιτική απορρήτου"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Επιλεγμένη ημέρα"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Προηγούμενη ημέρα"</string>
     <string name="default_error" msgid="7966868260616403475">"Παρουσιάστηκε κάποιο πρόβλημα. Δοκιμάστε ξανά."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Άγνωστος πόρος"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Δεδομένα πηγής"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Αριστερή αγκύλη."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Δεξιά αγκύλη."</string>
@@ -1201,7 +1220,7 @@
     <string name="current_allow_mode_while_in_use" msgid="6358053330935305061">"Επί του παρόντος, η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> μπορεί να αποκτήσει πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας κατά τη χρήση"</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> η πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας ανά πάσα στιγμή;"</string>
     <string name="current_access" msgid="1457167070428176139">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> έχει πρόσβαση σε δεδομένα: <xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
-    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Διαχείριση αδειών φυσικής κατάστασης και ευεξίας"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Διαχείριση αδειών"</string>
     <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Χρησιμοποιήθηκε από 1 εφαρμογή}other{Χρησιμοποιήθηκε από # εφαρμογές}}"</string>
     <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Δεν έχει χρησιμοποιηθεί τις τελευταίες 24 ώρες"</string>
     <string name="accessed" msgid="4424701457530587176">"Πρόσβαση στις <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
