--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -19,8 +19,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"Az egészségügyi adatokhoz való alkalmazás-hozzáférés kezelése"</string>
-    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
-    <skip />
+    <string name="health_connect_notification_channel_name" msgid="5189243942800749782">"Frissítések és értesítések"</string>
     <string name="permissions_and_data_header" msgid="4406105506837487805">"Engedélyek és adatok"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"Kezelheti az egészségével és a fitnesztevékenységeivel kapcsolatos adatokat az eszközén, és szabályozhatja, hogy mely alkalmazások férhetnek hozzájuk."</string>
     <string name="data_title" msgid="4456619761533380816">"Adatok és hozzáférés"</string>
@@ -43,6 +42,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Automatikus törlés, adatforrások, biztonsági mentés és visszaállítás"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"További elemek"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Kevesebb elem"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Biztonsági mentés"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Adatforrások és prioritás"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Egységek beállítása"</string>
@@ -64,6 +71,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Az Ön adataihoz nemrég hozzáférő alkalmazások automatikusan láthatók lesznek itt"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Az összes megtekintése"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Nem sikerült betölteni a legutóbbi hozzáférést"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Tevékenységek"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"tevékenységek"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Testméretek"</string>
@@ -369,12 +378,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Engedélyezés"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Összes engedélyezése"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Tiltás"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Adja meg, hogy az alkalmazás milyen adatokat olvashasson a Health Connectből, illetve írhasson a Health Connect számára."</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Adja meg, hogy az alkalmazás milyen adatokat olvashasson a Health Connectből."</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Adja meg, hogy az alkalmazás milyen adatokat írhasson a Health Connect számára."</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Olvasási hozzáférés megadásával az alkalmazás olvashatja az új és az elmúlt 30 napból származó adatokat."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Olvasási hozzáférés megadásával az alkalmazás olvashatja az új és korábbi adatokat."</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Engedélyezi, hogy a(z) <xliff:g id="APP_NAME">%1$s</xliff:g> hozzáférjen a Health Connect szolgáltatáshoz?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Engedélyezi a(z) <xliff:g id="APP_NAME">%1$s</xliff:g> számára a fittség- és jóllétadatokhoz való hozzáférést?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás adatkezeléséről bővebben a következő oldalon tájékozódhat: <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"adatvédelmi irányelvek"</string>
@@ -412,7 +429,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Kiválasztott nap"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Előző nap"</string>
     <string name="default_error" msgid="7966868260616403475">"Hiba történt. Próbálja újra."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Ismeretlen forrás"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Forrásadatok"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Nyitó szögletes zárójel."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Záró szögletes zárójel."</string>
