--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"ការលុបដោយស្វ័យប្រវត្តិ ប្រភពទិន្នន័យ ការបម្រុងទុក និងការស្ដារ"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"ធាតុច្រើនទៀត"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"ធាតុតិចជាងនេះ"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"បម្រុង​ទុក"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ប្រភពទិន្នន័យ និងអាទិភាព"</string>
     <string name="set_units_title" msgid="2657822539603758029">"កំណត់ឯកតា"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"កម្មវិធីដែលបានចូលប្រើទិន្នន័យរបស់អ្នកនាពេលថ្មីៗនេះនឹងបង្ហាញនៅទីនេះដោយស្វ័យប្រវត្តិ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"មើលទាំងអស់"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"មិនអាចផ្ទុកសិទ្ធិចូលប្រើថ្មីៗបានទេ"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"សកម្មភាព"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"សកម្មភាព"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"រង្វាស់រាងកាយ"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"អនុញ្ញាត"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"អនុញ្ញាតទាំងអស់"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"កុំអនុញ្ញាត"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"ជ្រើសរើសទិន្នន័យដែលអ្នកចង់ឱ្យកម្មវិធីនេះអាន ឬសរសេរទៅ Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"ជ្រើសរើសទិន្នន័យដែលអ្នកចង់ឱ្យកម្មវិធីនេះអានពី Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"ជ្រើសរើសទិន្នន័យដែលអ្នកចង់ឱ្យកម្មវិធីនេះសរសេរទៅ Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលអាន កម្មវិធីនេះអាចអានទិន្នន័យថ្មី និងទិន្នន័យពី 30 ថ្ងៃចុងក្រោយ"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលអាន កម្មវិធីនេះអាចអានទិន្នន័យថ្មី និងពីមុន"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើ Health Connect ឬ?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាពឬ?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"អ្នកអាចស្វែងយល់អំពីរបៀបដែល <xliff:g id="APP_NAME">%1$s</xliff:g> ចាត់ចែងទិន្នន័យរបស់អ្នកនៅក្នុង<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>របស់កម្មវិធីនោះ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"គោលការណ៍ឯកជនភាព"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"ថ្ងៃដែលបានជ្រើសរើស"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ថ្ងៃ​មុន"</string>
     <string name="default_error" msgid="7966868260616403475">"មានអ្វីមួយខុសប្រក្រតី។ សូមព្យាយាមម្ដងទៀត។"</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"ធនធាន​ដែលមិនស្គាល់"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"ទិន្នន័យប្រភព"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>វង់តង្កៀប​បើក។"</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>វង់តង្កៀបបិទ។"</string>
