--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"자동 삭제, 데이터 소스, 백업 및 복원"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"항목 더보기"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"항목 간략히 보기"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"백업"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"데이터 소스 및 우선순위"</string>
     <string name="set_units_title" msgid="2657822539603758029">"단위 설정"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"최근에 내 데이터에 액세스한 앱이 여기에 자동으로 표시됩니다."</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"모두 보기"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"최근 액세스를 로드할 수 없음"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"활동"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"활동"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"신체 측정"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"허용"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"모두 허용"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"허용 안함"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"앱이 헬스 커넥트에서 읽거나 쓸 수 있도록 허용할 데이터를 선택하세요."</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"앱이 헬스 커넥트에서 읽을 수 있도록 허용할 데이터를 선택하세요."</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"앱이 헬스 커넥트에 쓸 수 있도록 허용할 데이터를 선택하세요."</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"읽기 액세스 권한을 부여하면 앱에서 새로운 데이터와 지난 30일간의 데이터를 읽을 수 있습니다."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"읽기 액세스 권한을 부여하면 앱에서 새로운 데이터와 이전 데이터를 읽을 수 있습니다."</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 헬스 커넥트에 액세스할 수 있도록 허용하시겠습니까?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 피트니스 및 웰니스 데이터에 액세스하도록 허용하시겠습니까?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>에서 <xliff:g id="APP_NAME">%1$s</xliff:g>의 데이터 처리 방식을 알아볼 수 있습니다."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"개인정보처리방침"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"선택한 날짜"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"전날"</string>
     <string name="default_error" msgid="7966868260616403475">"문제가 발생했습니다. 다시 시도해 주세요."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"알 수 없는 리소스"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"소스 데이터"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>여는 중괄호."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>닫는 중괄호."</string>
