--- a/apk/res/values-lv/strings.xml
+++ b/apk/res/values-lv/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Automātiska dzēšana, datu avoti, dublēšana un atjaunošana"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Vairāk vienumu"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Mazāk vienumu"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Dublēšana"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Datu avoti un prioritāte"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Iestatīt mērvienības"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Šeit tiks automātiski rādītas lietotnes, kas nesen piekļuva jūsu datiem."</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Skatīt visu"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Nevarēja ielādēt informāciju par nesenu piekļuvi"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktivitāte"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"aktivitāte"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Ķermeņa rādītāji"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Atļaut"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Atļaut visu"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Neatļaut"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Izvēlieties, kādus datus šī lietotne drīkst lasīt vai rakstīt platformā Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Izvēlieties, kādus datus šī lietotne drīkst lasīt platformā Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Izvēlieties, kādus datus šī lietotne drīkst rakstīt platformā Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ja piešķirsiet lasīšanas piekļuvi, šī lietotne varēs lasīt jaunus datus, kā arī datus, kas pievienoti pēdējo 30 dienu laikā."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ja piešķirsiet lasīšanas piekļuvi, šī lietotne varēs lasīt gan jaunos, gan iepriekšējos datus."</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Vai atļaut lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> piekļūt platformai Health Connect?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Vai atļaut lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> piekļūt fitnesa un labsajūtas datiem?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Lai uzzinātu, kā lietotnē <xliff:g id="APP_NAME">%1$s</xliff:g> tiek apstrādāti jūsu dati, skatiet: <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"konfidencialitātes politiku"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Atlasītā diena"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Iepriekšējā diena"</string>
     <string name="default_error" msgid="7966868260616403475">"Radās kļūda. Lūdzu, mēģiniet vēlreiz."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Nezināms resurss"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Avota dati"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Atverošā figūriekava."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Aizverošā figūriekava."</string>
