--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Автоматаар устгах, өгөгдлийн сурвалж, нөөцлөх, сэргээх"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Илүү олон зүйл"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Цөөн зүйл"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Нөөцлөх"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Өгөгдлийн сурвалж болон чухалчлал"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Нэгжүүд тохируулах"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Таны өгөгдөлд саяхан хандсан аппуудыг энд автоматаар харуулна"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Бүгдийг харах"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Саяхны хандалтыг ачаалж чадсангүй"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Дасгал, хөдөлгөөн"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"дасгал, хөдөлгөөн"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Биеийн хэмжээ"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Зөвшөөрөх"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Бүгдийг зөвшөөрөх"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Бүү зөвшөөр"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Энэ аппад Health Connect-д уншуулах, бичүүлэхийг хүсэж буй өгөгдлөө сонгоно уу"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Энэ аппад Health Connect-с уншуулахыг хүсэж буй өгөгдлөө сонгоно уу"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Энэ аппад Health Connect-д бичүүлэхийг хүсэж буй өгөгдлөө сонгоно уу"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Хэрэв та унших эрх өгвөл апп шинэ өгөгдөл болон сүүлийн 30 хоногийн өгөгдлийг унших боломжтой"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Хэрэв та унших эрх өгвөл апп шинэ болон өмнөх өгөгдлийг унших боломжтой"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g>-г Health Connect-д хандахыг зөвшөөрөх үү?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д фитнес, эрүүл оршихуйн өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Та <xliff:g id="APP_NAME">%1$s</xliff:g> таны өгөгдлийг хэрхэн зохицуулдаг болохыг тухайн аппын <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>-с мэдэж авах боломжтой"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"нууцлалын бодлого"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Сонгосон өдөр"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Өмнөх өдөр"</string>
     <string name="default_error" msgid="7966868260616403475">"Алдаа гарлаа. Дахин оролдоно уу."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Тодорхойгүй нөөц"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Эх өгөгдөл"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Нээх хаалт."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Хаах хаалт."</string>
