--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Fshirja automatike, burimet e të dhënave, rezervimi dhe restaurimi"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Më shumë artikuj"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Më pak artikuj"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Rezervimi"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Burimet e të dhënave dhe përparësia"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Cakto njësitë"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Aplikacionet që janë qasur së fundi në të dhënat e tua do të shfaqen automatikisht këtu"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Shiko të gjitha"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Qasja e fundit nuk mund të ngarkohej"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktiviteti"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"aktiviteti"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Matjet e trupit"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Lejo"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Lejoji të gjitha"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Mos lejo"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Zgjidh të dhënat që dëshiron që ky aplikacion të lexojë ose të shkruajë te Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Zgjidh të dhënat që dëshiron që ky aplikacion të lexojë te Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Zgjidh të dhënat që dëshiron që ky aplikacion të shkruajë te Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhëna të reja dhe të dhëna nga 30 ditët e fundit"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhënat e reja dhe të kaluara"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Të lejohet <xliff:g id="APP_NAME">%1$s</xliff:g> që të ketë qasje në Health Connect?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat e fitnesit dhe të mirëqenies?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Mund të mësosh se si <xliff:g id="APP_NAME">%1$s</xliff:g> i administron të dhënat e tua te <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"politika e privatësisë"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Dita e zgjedhur"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Dita e mëparshme"</string>
     <string name="default_error" msgid="7966868260616403475">"Ndodhi një gabim. Provo përsëri."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Burim i panjohur"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Të dhënat burimore"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Kllapa hapëse."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Kllapa mbyllëse."</string>
