--- a/apk/res/values-sw/strings.xml
+++ b/apk/res/values-sw/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Futa kiotomatiki, vyanzo vya data, hifadhi nakala na urejeshe"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Vipengee vingi"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Vipengee vichache"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Hifadhi nakala"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Vyanzo vya data na kipaumbele"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Weka vipimo"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Programu ambazo zimefikia data yako hivi majuzi zitaonekana hapa kiotomatiki"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Angalia yote"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Imeshindwa kupakia vipengele vilivyofikiwa hivi majuzi"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Shughuli"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"shughuli"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Vipimo vya mwili"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Ruhusu"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Ruhusu zote"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Usiruhusu"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Chagua data unayotaka programu hii isome au iandike kwenye Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Chagua data unayotaka programu hii isome kwenye Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Chagua data unayotaka programu hii iandike kwenye Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Ukitoa idhini ya kusoma, programu hii inaweza kusoma data mpya na ya siku 30 zilizopita"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Ukitoa idhini ya kusoma, programu hii inaweza kusoma data mpya na ya awali"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Ungependa kuruhusu programu ya <xliff:g id="APP_NAME">%1$s</xliff:g> kufikia Health Connect?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Ungependa kuruhusu <xliff:g id="APP_NAME">%1$s</xliff:g> ifikie data ya mazoezi na siha?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Unaweza kujifunza jinsi <xliff:g id="APP_NAME">%1$s</xliff:g> inavyoshughulikia data yako kwenye <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"sera ya faragha"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Siku iliyochaguliwa"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Siku iliyotangulia"</string>
     <string name="default_error" msgid="7966868260616403475">"Hitilafu fulani imetokea. Tafadhali jaribu tena."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Nyenzo Isiyojulikana"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Data ya chanzo"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Bano lililofunguliwa."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Bano lililofungwa."</string>
