--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"தானாக நீக்குதல், தரவு மூலங்கள், காப்புப் பிரதி மற்றும் மீட்டெடுத்தல்"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"மேலும்"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"சுருக்கு"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"காப்புப் பிரதி எடு"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"தரவு மூலங்களும் முன்னுரிமையும்"</string>
     <string name="set_units_title" msgid="2657822539603758029">"அலகுகளை அமை"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"சமீபத்தில் உங்கள் தரவை அணுகிய ஆப்ஸ் தானாக இங்கே காட்டப்படும்"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"அனைத்தையும் காட்டு"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"சமீபத்திய அணுகலை ஏற்ற முடியவில்லை"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"செயல்பாடு"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"செயல்பாடு"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"உடல் அளவீடுகள்"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"அனுமதி"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"அனைத்தையும் அனுமதி"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"அனுமதிக்க வேண்டாம்"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Health Connectடில் இந்த ஆப்ஸ் எந்தத் தரவைப் படிக்க/எழுத வேண்டும் என்பதைத் தேர்வுசெய்யவும்"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Health Connectடில் இந்த ஆப்ஸ் எந்தத் தரவைப் படிக்க வேண்டும் என்பதைத் தேர்வுசெய்யவும்"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Health Connectடில் இந்த ஆப்ஸ் எந்தத் தரவை எழுத வேண்டும் என்பதைத் தேர்வுசெய்யவும்"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"வாசிப்பதற்கான அணுகலை வழங்கினால், புதிய தரவையும் கடந்த 30 நாட்களில் பெறப்பட்ட தரவையும் ஆப்ஸ் வாசிக்க முடியும்"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"வாசிப்பதற்கான அணுகலை வழங்கினால், புதிய தரவையும் முந்தைய தரவையும் ஆப்ஸ் வாசிக்க முடியும்"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Health Connectடை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்க வேண்டுமா?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"உடற்பயிற்சி மற்றும் ஆரோக்கியம் குறித்த தரவை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸ் உங்கள் தரவை எப்படிக் கையாளுகிறது என்பதை <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> பக்கத்தில் நீங்கள் தெரிந்துகொள்ளலாம்"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"தனியுரிமைக் கொள்கை"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"தேர்ந்தெடுத்துள்ள நாள்"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"முந்தைய நாள்"</string>
     <string name="default_error" msgid="7966868260616403475">"ஏதோ தவறாகிவிட்டது. மீண்டும் முயலவும்."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"அறியப்படாத ஆதாரம்"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"மூலத் தரவு"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>திறந்த சுருள் அடைப்புக்குறி."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>மூடிய சுருள் அடைப்புக்குறி."</string>
