--- a/apk/res/values-te/strings.xml
+++ b/apk/res/values-te/strings.xml
@@ -19,8 +19,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"Health Connect"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"ఆరోగ్యానికి సంబంధించిన డేటాకు యాప్ యాక్సెస్‌ను మేనేజ్ చేయండి"</string>
-    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
-    <skip />
+    <string name="health_connect_notification_channel_name" msgid="5189243942800749782">"అప్‌డేట్‌లు, అలర్ట్‌లు"</string>
     <string name="permissions_and_data_header" msgid="4406105506837487805">"అనుమతులు, డేటా"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"మీ పరికరంలో ఆరోగ్యం, ఫిట్‌నెస్ డేటాను మేనేజ్ చేయండి, అలాగే ఏ యాప్‌లు దీన్ని యాక్సెస్ చేయవచ్చో కంట్రోల్ చేయండి"</string>
     <string name="data_title" msgid="4456619761533380816">"డేటా, యాక్సెస్"</string>
@@ -43,6 +42,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"ఆటోమేటిక్ తొలగింపు, డేటా సోర్స్‌లు, బ్యాకప్, రీస్టోర్"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"మరిన్ని ఐటెమ్‌లు"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"తక్కువ ఐటెమ్‌లు"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"బ్యాకప్"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"డేటా సోర్స్‌లు, ప్రాధాన్యత"</string>
     <string name="set_units_title" msgid="2657822539603758029">"యూనిట్‌లను సెట్ చేయండి"</string>
@@ -64,6 +71,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"మీ డేటాను ఇటీవల యాక్సెస్ చేసిన యాప్‌లు ఇక్కడ ఆటోమేటిక్‌గా కనిపిస్తాయి"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"అన్నింటినీ చూడండి"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"ఇటీవలి యాక్సెస్‌ను లోడ్ చేయడం సాధ్యపడలేదు"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"యాక్టివిటీ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"యాక్టివిటీ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"శరీర కొలతలు"</string>
@@ -369,12 +378,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"అనుమతించండి"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"అన్నీ అనుమతించండి"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"అనుమతించవద్దు"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Health Connect కోసం ఈ యాప్, ఏ డేటాను చదవాలో లేదా రాయాలో ఎంచుకోండి"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Health Connect నుండి ఈ యాప్, ఏ డేటాను చదవాలో లేదా రాయాలో ఎంచుకోండి"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Health Connect కోసం ఈ యాప్, ఏ డేటాను రాయాలో ఎంచుకోండి"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"మీరు చదవగల యాక్సెస్‌ను ఇచ్చినట్లయితే, యాప్ కొత్త డేటాను, అలాగే గత 30 రోజులకు చెందిన డేటాను చదవగలదు"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"మీరు చదవడానికి యాక్సెస్ ఇస్తే, యాప్ కొత్త, పాత డేటాను చదవగలదు"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Health Connectను యాక్సెస్ చేయడానికి <xliff:g id="APP_NAME">%1$s</xliff:g>‌ను అనుమతించాలా?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"ఫిట్‌నెస్, వెల్‌నెస్ డేటాను యాక్సెస్ చేయడానికి <xliff:g id="APP_NAME">%1$s</xliff:g>‌ను అనుమతించాలా?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>‌లో మీ డేటాను <xliff:g id="APP_NAME">%1$s</xliff:g> ఎలా హ్యాండిల్ చేస్తుందో మీరు తెలుసుకోవచ్చు"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"గోప్యతా పాలసీ"</string>
@@ -412,7 +429,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"ఎంచుకున్న రోజు"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"మునుపటి రోజు"</string>
     <string name="default_error" msgid="7966868260616403475">"ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ట్రై చేయండి."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"తెలియని రిసోర్స్"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"సోర్స్ డేటా"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>తెరిచిన బ్రాకెట్."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>మూసిన బ్రాకెట్."</string>
