--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -19,8 +19,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4768580772453324183">"‫Health Connect ایپ"</string>
     <string name="health_connect_summary" msgid="6401520186678972547">"صحت کے ڈیٹا تک ایپ کی رسائی کا نظم کریں"</string>
-    <!-- no translation found for health_connect_notification_channel_name (5189243942800749782) -->
-    <skip />
+    <string name="health_connect_notification_channel_name" msgid="5189243942800749782">"اپ ڈیٹس اور الرٹس"</string>
     <string name="permissions_and_data_header" msgid="4406105506837487805">"اجازتیں اور ڈیٹا"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"اپنے آلہ پر صحت اور تندرستی کے ڈیٹا کا نظم کریں اور کنٹرول کریں کہ کون سی ایپس اس تک رسائی حاصل کر سکتی ہیں"</string>
     <string name="data_title" msgid="4456619761533380816">"ڈیٹا اور رسائی"</string>
@@ -43,6 +42,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"خودکار طور پر حذف کرنا، ڈیٹا کے مآخذ، بیک اپ اور بحالی"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"زیادہ آئٹمز"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"کم آئٹمز"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"بیک اپ لیں"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ڈیٹا کے ماخذات اور ترجیح"</string>
     <string name="set_units_title" msgid="2657822539603758029">"یونٹس سیٹ کریں"</string>
@@ -64,6 +71,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"جن ایپس نے حال ہی میں آپ کے ڈیٹا تک رسائی حاصل کی ہے وہ خودکار طور پر یہاں دکھائی دیں گی"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"سبھی دیکھیں"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"حالیہ رسائی کو لوڈ نہیں کیا جا سکا"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"سرگرمی"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"سرگرمی"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"جسمانی پیمائشوں سے متعلق ڈیٹا"</string>
@@ -369,12 +378,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"اجازت دیں"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"سبھی کو اجازت دیں"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"اجازت نہ دیں"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"وہ ڈیٹا منتخب کریں جسے آپ چاہتے ہیں کہ یہ ایپ Health Connect پر پڑھے یا لکھے"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"وہ ڈیٹا منتخب کریں جسے آپ چاہتے ہیں کہ یہ ایپ Health Connect سے پڑھے"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"وہ ڈیٹا منتخب کریں جسے آپ چاہتے ہیں کہ یہ ایپ Health Connect پر پڑھے"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"اگر آپ پڑھنے کی رسائی دیتے ہیں تو ایپ نیا ڈیٹا اور گزشتہ 30 دن کا ڈیٹا پڑھ سکتی ہے"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"اگر آپ پڑھنے کی رسائی دیتے ہیں تو ایپ نئے اور گزشتہ ڈیٹا کو پڑھ سکتی ہے"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> کو Health Connect تک رسائی کی اجازت دیں؟"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> کو تندرستی اور فلاح و بہبود کے ڈیٹا تک رسائی کی اجازت دیں؟"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"آپ اپنے <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> میں یہ جان سکتے ہیں کہ <xliff:g id="APP_NAME">%1$s</xliff:g> آپ کے ڈیٹا کو کیسے ہینڈل کرتی ہے"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"رازداری کی پالیسی"</string>
@@ -412,7 +429,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"منتخب کردہ یوم"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"پچھلا دن"</string>
     <string name="default_error" msgid="7966868260616403475">"کچھ غلط ہو گیا۔ براہ کرم دوبارہ کوشش کریں۔"</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"نامعلوم وسیلہ"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"ماخذ ڈیٹا"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>کھلی بریکٹ۔"</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>بند بریکٹ۔"</string>
