--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -43,6 +43,14 @@
     <string name="manage_data_summary" msgid="8537870912521944449">"Xoá tự động, nguồn dữ liệu, sao lưu và khôi phục"</string>
     <string name="banner_group_more_items" msgid="1071243933488973950">"Hiện thêm mục"</string>
     <string name="banner_group_fewer_items" msgid="3792478123282046349">"Ẩn bớt mục"</string>
+    <!-- no translation found for settings_manage_permission (3805037674102124581) -->
+    <skip />
+    <!-- no translation found for settings_combined_permissions (3660209476196545539) -->
+    <skip />
+    <!-- no translation found for settings_fitness_permissions (8133228907519227359) -->
+    <skip />
+    <!-- no translation found for settings_medical_permissions (4621535972501674863) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Sao lưu"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Nguồn dữ liệu và mức độ ưu tiên"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Đặt đơn vị"</string>
@@ -64,6 +72,8 @@
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Các ứng dụng gần đây đã truy cập vào dữ liệu của bạn sẽ tự động xuất hiện tại đây"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Xem tất cả"</string>
     <string name="recent_access_error" msgid="2258399573560888960">"Không tải được quyền truy cập gần đây"</string>
+    <!-- no translation found for recent_access_inactive_app (8754221676902025802) -->
+    <skip />
     <string name="activity_category_uppercase" msgid="136628843341377088">"Hoạt động"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"hoạt động"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Số đo cơ thể"</string>
@@ -369,12 +379,20 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Cho phép"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Cho phép tất cả"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Không cho phép"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Chọn dữ liệu bạn muốn ứng dụng này đọc hoặc ghi vào Health Connect"</string>
-    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Chọn dữ liệu bạn muốn ứng dụng này đọc từ Health Connect"</string>
-    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Chọn dữ liệu bạn muốn ứng dụng này ghi vào Health Connect"</string>
+    <!-- no translation found for request_fitness_permissions_data_access_type_read_write (4803850894991591079) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_read (1936040466183377312) -->
+    <skip />
+    <!-- no translation found for request_fitness_permissions_data_access_type_write (953067161810334338) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read_write (3777178665662806833) -->
+    <skip />
+    <!-- no translation found for request_medical_permissions_data_access_type_read (2155961852937520094) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Nếu bạn cấp quyền đọc, ứng dụng này có thể đọc dữ liệu mới và dữ liệu trong 30 ngày qua"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Nếu bạn cấp quyền đọc, ứng dụng này có thể đọc dữ liệu mới và dữ liệu trước đây"</string>
-    <string name="request_permissions_header_title" msgid="4264236128614363479">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào Health Connect?"</string>
+    <!-- no translation found for request_fitness_permissions_header_title (5330395074131008360) -->
+    <skip />
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào dữ liệu về sức khoẻ và thể dục?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Bạn có thể tìm hiểu cách <xliff:g id="APP_NAME">%1$s</xliff:g> xử lý dữ liệu của bạn trong <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> của họ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"chính sách quyền riêng tư"</string>
@@ -412,7 +430,8 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ngày đã chọn"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Ngày hôm trước"</string>
     <string name="default_error" msgid="7966868260616403475">"Đã xảy ra lỗi. Vui lòng thử lại."</string>
-    <string name="unkwown_resource" msgid="7932225227431922125">"Tài nguyên không xác định"</string>
+    <!-- no translation found for unkwown_resource (5414479649607888981) -->
+    <skip />
     <string name="raw_fhir_title" msgid="1295744907036066319">"Dữ liệu nguồn"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Dấu ngoặc mở."</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Dấu ngoặc đóng."</string>
@@ -477,7 +496,7 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{Lượt xuất gần đây nhất: 1 giờ trước}other{Lượt xuất gần đây nhất: # giờ trước}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"Lần xuất gần đây nhất: chưa có"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"Lần xuất theo lịch"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"Xuất theo lịch"</string>
     <string name="import_data" msgid="404502315533233094">"Nhập dữ liệu"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Khôi phục dữ liệu từ tệp đã xuất trước đó"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"Không khôi phục được dữ liệu"</string>
